The extension is now loaded after all frames and images have been loaded to avoid a strange bug with Google where it was being bound to an IFRAME instead of the actual document.

--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
       "css": [ "styles.css" ],
       "js": [ "lib/jquery-1.7.min.js", "lib/sha1.js", "lib/passhashcommon.js", "common.js", "content.js" ],
       "matches": [ "http://*/*", "https://*/*" ],
-      "run_at": "document_end"
+      "run_at": "document_idle"
    } ],
    "description": "Password Hasher Ultimate automatically enhances password strength (length and difficulty) to protect your accounts.",
    "icons": {
